--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+.holder
+{
+    display: flex;
+    background-color: lightblue;
+    flex-flow: row wrap;
+    justify-content: space-between;
+}
+.item
+{
+    height: 100px;
+    width: 100px;
+    background-color: white;
+    margin: 40px 10px;
+}
